# JZNodeEditor

./: .data  .gitignore  CMakeLists.txt  JZNodeCore.cpp  JZNodeCore.h  JZNodeCoreDefine.h  JZNodeEditor.pro  JZNodeEditor.qrc  JZNodeEditor.sln  JZNodeEditor.vcxproj  JZNodeEditor.vcxproj.filters  JZProjectTree.cpp  JZProjectTree.h  LICENSE  LogManager.cpp  LogManager.h  LogWidget.cpp  LogWidget.h  UiCommon.cpp  UiCommon.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
3rd/: CMakeLists.txt
3rd/jzmodbus/: JZModbusClient.cpp  JZModbusClient.h  JZModbusContext.cpp  JZModbusContext.h  JZModbusMaster.cpp  JZModbusMaster.h  JZModbusParam.cpp  JZModbusParam.h  JZModbusRtu.h  JZModbusServer.cpp  JZModbusServer.h  JZModbusSlaver.cpp  JZModbusSlaver.h  JZModbusTcp.cpp  JZModbusTcp.h
3rd/jznet/: JZNetClient.cpp  JZNetClient.h  JZNetDataManager.cpp  JZNetDataManager.h  JZNetPack.cpp  JZNetPack.h  JZNetServer.cpp  JZNetServer.h
3rd/jzprofiler/: JZTx.cpp  JZTx.h
3rd/jzupdate/: JZUpdateClient.cpp  JZUpdateClient.h  JZUpdateDialog.cpp  JZUpdateDialog.h  JZUpdatePack.cpp  JZUpdatePack.h  JZUpdateServer.cpp  JZUpdateServer.h  JZUpdateTest.cpp  JZUpdateTest.h  JZUpdateUtils.cpp  JZUpdateUtils.h
3rd/qcustomplot/: JZPlotConfg.cpp  JZPlotConfg.h
3rd/qtpropertybrowser/: qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
Resources/: fucntionList.txt  moduleList.json  widgetBox.xml
doc/: 汇编定义.txt  设计.txt  资料.txt
editor/: JZEditor.cpp  JZEditor.h  JZEditorGlobal.cpp  JZEditorGlobal.h  JZEditorPlugin.cpp  JZEditorPlugin.h  JZNewClassDialog.cpp  JZNewClassDialog.h  JZNewClassDialog.ui  JZNewFileDialog.cpp  JZNewFileDialog.h  JZNewFileDialog.ui  JZNewProjectDialog.cpp  JZNewProjectDialog.h  JZNewProjectDialog.ui  JZProjectSettingDialog.cpp  JZProjectSettingDialog.h  JZProjectTree.cpp  JZProjectTree.h  UiCommon.h
editor/script/: JZNodeAutoRunEditDialog.cpp  JZNodeAutoRunEditDialog.h  JZNodeAutoRunThread.cpp  JZNodeAutoRunThread.h  JZNodeAutoRunWidget.cpp  JZNodeAutoRunWidget.h  JZNodeBaseItem.cpp  JZNodeBaseItem.h  JZNodeBreakPoint.cpp  JZNodeBreakPoint.h  JZNodeBuildThread.cpp  JZNodeBuildThread.h  JZNodeClassEditDialog.cpp  JZNodeClassEditDialog.h  JZNodeClassEditDialog.ui  JZNodeEditor.cpp  JZNodeEditor.h  JZNodeEditorManager.cpp  JZNodeEditorManager.h  JZNodeEditorWidget.cpp  JZNodeEditorWidget.h  JZNodeExprEditDialog.cpp  JZNodeExprEditDialog.h  JZNodeFlagEditDialog.cpp  JZNodeFlagEditDialog.h  JZNodeFuctionEditDialog.cpp  JZNodeFuctionEditDialog.h  JZNodeFuctionEditDialog.ui  JZNodeGraphItem.cpp  JZNodeGraphItem.h  JZNodeGroupEditDialog.cpp  JZNodeGroupEditDialog.h  JZNodeGroupEditDialog.ui  JZNodeGroupItem.cpp  JZNodeGroupItem.h  JZNodeLayout.cpp  JZNodeLayout.h  JZNodeLineItem.cpp  JZNodeLineItem.h  JZNodeLocalParamEditDialog.cpp  (+63 more)
editor/tools/: JZModbusConfigDialog.cpp  JZModbusConfigDialog.h  JZModbusConfigDialog.ui  JZModbusSimulator.cpp  JZModbusSimulator.h  JZModbusSimulator.ui  JZModbusTemplateDialog.h
editor/ui/: JZDesignerEditor.cpp  JZDesignerEditor.h  JZDesignerFormWindow.cpp  JZDesignerFormWindow.h  JZDesinger.cpp  JZDesinger.h  JZMenuExtension.cpp  JZMenuExtension.h  JZNodeIntegration.cpp  JZNodeIntegration.h  (+4 more)
modules/: CMakeLists.txt  JZModuleModbus.cpp  JZModuleModbus.h  JZModuleNetwok.cpp
modules/modbus/: CMakeLists.txt  JZModbusConfigDialog.h  JZModbusSimulator.cpp  JZModbusSimulator.h  JZModbusTemplateDialog.cpp  JZModbusTemplateDialog.h  JZModuleModbus.cpp  JZModuleModbus.h
modules/modbus/jzmodbus/: JZModbusClient.cpp  JZModbusContext.cpp  JZModbusDefine.cpp  JZModbusDefine.h  JZModbusMaster.h  JZModbusParam.cpp  JZModbusRtu.cpp  JZModbusServer.h  JZModbusSlaver.h
modules/opencv/: CMakeLists.txt  CvMatAndQImage.cpp  JZModuleOpencv.cpp  JZModuleOpencv.h
project/: JZClassFile.cpp  JZClassFile.h  JZClassItem.cpp  JZClassItem.h  JZLibraryFile.cpp  JZLibraryFile.h  JZParamFile.cpp  JZParamFile.h  JZParamItem.cpp  JZParamItem.h  JZProject.cpp  JZProject.h  JZProjectItem.cpp  JZProjectItem.h  JZProjectItemStream.cpp  JZProjectItemStream.h  JZProjectStream.cpp  JZProjectStream.h  JZProjectTemplate.cpp  JZProjectTemplate.h  JZScriptFile.cpp  JZScriptFile.h  JZScriptItem.cpp  JZScriptItem.h  JZUIFile.cpp  JZUiFile.h
sample/: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.ui  ImageBatch.cpp  ImageBatch.h  Russian.cpp  Russian.h  Russian.ui  SampleProject.cpp  SampleProject.h  main.cpp
sample/HmiDemo/: air_win.ui  app.qss  coffee_win.ui  home_page.ui  system_bar.ui  system_bar_b.ui
sample/ImageBatch/: ImageBatch.cpp  ImageBatch.h  ImageBatch.ui
sample/ImageModule/: ImageModule.cpp  ImageModule.h
sample/Russian/: Russian.cpp  Russian.h  Russian.ui
sample/SmartHome/: SmartHome.cpp  SmartHome.h  SmartHome.ui
script/: JZContainer.cpp  JZContainer.h  JZEvent.cpp  JZEvent.h  JZExpression.cpp  JZExpression.h  JZExpressionSolver.cpp  JZExpressionSolver.h  JZModule.cpp  JZModule.h  JZNode.cpp  JZNode.h  JZNodeBind.cpp  JZNodeBind.h  JZNodeBuilder.cpp  JZNodeBuilder.h  JZNodeCompiler.cpp  JZNodeCompiler.h  JZNodeCppGenerater.cpp  JZNodeCppGenerater.h  JZNodeDebugClient.cpp  JZNodeDebugClient.h  JZNodeDebugPacket.cpp  JZNodeDebugPacket.h  JZNodeDebugServer.cpp  JZNodeDebugServer.h  JZNodeDefine.cpp  JZNodeDefine.h  JZNodeEngine.cpp  JZNodeEngine.h  JZNodeEnum.cpp  JZNodeEnum.h  JZNodeEvent.cpp  JZNodeEvent.h  JZNodeExpression.cpp  JZNodeExpression.h  JZNodeFactory.cpp  JZNodeFactory.h  JZNodeFunction.cpp  JZNodeFunction.h  (+53 more)
tests/: CMakeLists.txt  main.cpp  test_anglescript.cpp  test_anglescript.h  test_base.cpp  test_base.h  test_benchmark.cpp  test_benchmark.h  test_program.cpp  test_script.cpp  test_script.h  test_server.cpp  test_server.h  test_ui.cpp  test_ui.h
widgets/: JZAboutDialog.cpp  JZAboutDialog.h  JZBaseDialog.cpp  JZBaseDialog.h  JZSearchTreeWidget.cpp  JZSearchTreeWidget.h  QImageLabel.cpp  QImageLabel.h
(+32 files in other folders)
